--- a/Home/home.css
+++ b/Home/home.css
@@ -42,4 +42,26 @@
     
     }
 
-   
+    .corpo1{
+        border: 2px solid red;
+        display: flex;
+        
+        justify-content: center;
+    }
+
+.tela_inicial{
+    border: 3px solid green;
+
+
+
+}
+
+.titulos{
+    color: white;
+}
+
+.botao_seemore{
+
+color: white;
+
+}
