--- a/teste/teste.css
+++ b/teste/teste.css
@@ -19,6 +19,9 @@
      gap: 30px;
  }
 
+div{
+    display: flex;
+}
  header {
      position: absolute;
      top: 0;
@@ -36,7 +39,7 @@
  header li {
      color: rgb(255, 255, 255);
      font-family: "LomoCopy LT Std Regular";
-     font-size: 20px;
+     font-size: 2%;
      list-style: none;
  }
  
@@ -44,7 +47,7 @@
      display: flex;
      justify-content: center;
      flex-wrap: wrap;
-     margin: 10px 0;
+     gap: 4vh;
  }
  
  header .navigation li {
@@ -105,7 +108,7 @@
  }
  
  .logo {
-     width: 100px;
+     width: 7vw;
  }
  
  .lupinha {
@@ -245,17 +248,24 @@
  .img_grande {
      margin-top: 90px;
      width: 90%;
+     display: inline-flex;
+     justify-content: center;
+     align-items: center;
  }
  
 input[type=checkbox] {
-    
+    margin: 0px;
+    display: none;
    
 }
+
+
 label i.fa:before {
     content:'\f005';
     color: #CCC;
     cursor: pointer;
 }
+
 input[type=checkbox]:checked ~ label i.fa:before {
     color: #FC0;
     
@@ -271,22 +281,28 @@ input[type=checkbox]:checked ~ label i.fa:before {
     flex-wrap: wrap;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: bold;
+   gap: 8vh;
+   align-items: center;
+   justify-content: center;
+   font-size: 1vw;
 }
 
 .jogo {
      margin-top: 3%;
-     display: flex;
+     display: inline-flex;
      flex-direction: column;
      align-items: center;
  }
  
  .jogo img {
      border-radius: 10%;
+     width: 40vh;
     }
     
     .imagem-jogo {
-        display: flex;
+        display: inline-flex;
         align-items: flex-start;
+
     }
  
     .imagem-jogo input {
