--- a/Home/home.css
+++ b/Home/home.css
@@ -1,27 +1,28 @@
-@import url(//db.onlinewebfonts.com/c/bec3644fbb99759baf1d9dc9df1f187e?family=LomoCopy+LT+Std+Regular); 
-
-
-*,*:before,*:after {
+@import url(//db.onlinewebfonts.com/c/bec3644fbb99759baf1d9dc9df1f187e?family=LomoCopy+LT+Std+Regular);
+*,
+*:before,
+*:after {
 	box-sizing: border-box;
 }
-
 
 :after {
 	content: "";
 }
 
 body {
-    background-image: url(../Background.png);
+	background-image: url(../Background.png);
 }
 
-
-.conteudo{
+.conteudo {
 	display: flex;
 	align-items: center;
 	gap: 30px;
 }
 
-header{
+div{
+   display: flex;
+}
+header {
 	position: absolute;
 	top: 0;
 	left: 0;
@@ -32,53 +33,48 @@ header{
 	align-items: center;
 	padding: 15px 100px;
 	z-index: 10;
-	background-color:  rgba(60, 1, 74, 0.585);
+	background-color: rgba(60, 1, 74, 0.585);
 }
 
-header li{
+header li {
 	color: rgb(255, 255, 255);
-	font-family:"LomoCopy LT Std Regular";
-	font-size: 20px;
+	font-family: "LomoCopy LT Std Regular";
+	font-size: 2%;
 	list-style: none;
 }
 
-
-header .navigation{
+header .navigation {
 	display: flex;
 	justify-content: center;
 	flex-wrap: wrap;
-	margin: 10px 0;
+	gap: 4vh;
 }
 
-header .navigation li{
+header .navigation li {
 	list-style: none;
 	margin: 0 10px;
 }
 
-header .navigation li a{
+header .navigation li a {
 	color: rgb(255, 255, 255);
 	text-decoration: none;
 	font-weight: 500;
+	font-size: 1.5vw;
 	letter-spacing: 1px;
-
 }
 
-header .navigation li a:hover
-{
+header .navigation li a:hover {
 	color: blueviolet;
 	font-weight: bold;
-
 }
 
-header .search 
-{
+header .search {
 	position: relative;
-	width: 300px;
+	width: 20vw;
 	height: 40px;
 }
 
-header .search input 
-{
+header .search input {
 	top: 0;
 	left: 0;
 	width: 100%;
@@ -86,18 +82,16 @@ header .search input
 	color: rgba(255, 255, 255, 0.736);
 	background: transparent;
 	outline: none;
-	border:  1px solid blueviolet;
+	border: 1px solid rgb(175, 117, 230);
 	border-radius: 5px;
 	padding: 0 10px 0 45px;
 }
 
-header .search input::placeholder
-{
-	color: blueviolet;	
+header .search input::placeholder {
+	color: rgb(202, 161, 240);
 }
 
-header .search .fa-search
-{
+header .search .fa-search {
 	position: absolute;
 	top: 50%;
 	transform: translateY(-50%);
@@ -106,172 +100,227 @@ header .search .fa-search
 	border-right: 1px solid #fff;
 	width: 25px;
 	padding-right: 5px;
-
 }
 
-.barra{
+.barra {
 	width: 20px;
+   
 }
 
-.logo{
-	width: 100px;
+.logo {
+	width: 7vw;
 }
 
-.lupinha{
+.lupinha {
 	width: 25px;
 }
 
-.lupa{
-		display: flex;
-		justify-content: right;
+.lupa {
+	display: flex;
+	justify-content: right;
 }
 
 nav {
-  float: left;
+	float: left;
 	position: relative;
 	top: 50px;
-    right: 50px;
+	right: 50px;
 	background: transparent;
-    
 }
 
 nav ul {
 	text-align: center;
-    list-style: none;
+	list-style: none;
 }
-
 
 nav ul li {
 	margin-top: 1px;
 	position: relative;
-    width: 70px;
-    height: 80px;
-    cursor: pointer;
+	width: 70px;
+	height: 80px;
+	cursor: pointer;
 	background: rgba(60, 1, 74, 0.585);
 	text-transform: uppercase;
-	transition:all .4s ease-out;
+	transition: all .4s ease-out;
 }
 
 nav ul li:after {
 	position: absolute;
 	background: white;
 	color: rgb(90, 20, 220);
-	top:0;
+	top: 0;
 	left: 70px;
-	width: 70px; 
+	width: 70px;
 	height: 100%;
-    opacity:.5;
-     transform: perspective(400px) rotateY(90deg);
+	opacity: .5;
+	transform: perspective(400px) rotateY(90deg);
 	transform-origin: 0 100%;
-	transition:all .4s ease-out;
+	transition: all .4s ease-out;
 }
 
-nav ul li:nth-child(1):after { 
+nav ul li:nth-child(1):after {
 	content: "Home";
+	font-weight: 800;
 	line-height: 88px;
-    width: 100px;
+	width: 100px;
 }
-nav ul li:nth-child(2):after { 
+
+nav ul li:nth-child(2):after {
 	content: "PVP";
+	font-weight: 800;
 	line-height: 88px;
-    width: 100px;
+	width: 100px;
 }
-nav ul li:nth-child(3):after { 
+
+nav ul li:nth-child(3):after {
 	content: "MMOFPS";
 	line-height: 88px;
-    width: 100px;
+	font-weight: 800;
+	width: 100px;
 }
-nav ul li:nth-child(4):after { 
+
+nav ul li:nth-child(4):after {
 	content: "SURVIVAL";
 	line-height: 88px;
-    width: 100px;
+	font-weight: 800;
+	width: 100px;
 }
-nav ul li:nth-child(5):after { 
+
+nav ul li:nth-child(5):after {
 	content: "CARD";
 	line-height: 88px;
-    width: 100px;
+	font-weight: 800;
+	width: 100px;
 }
-nav ul li:nth-child(6):after { 
+
+nav ul li:nth-child(6):after {
 	content: "FIGHTING";
 	line-height: 88px;
-    width: 100px;
+	font-weight: 800;
+	width: 100px;
 }
-nav ul li:nth-child(7):after { 
+
+nav ul li:nth-child(7):after {
 	content: "SHOOTING";
 	line-height: 88px;
-    width: 100px;
+	font-weight: 800;
+	width: 100px;
 }
+
+nav ul li:nth-child(8):after {
+   content: "OPEN-WORLD";
+   font-size: 12px;
+   font-weight: 800;
+   line-height: 88px;
+   width: 100px;
+}
+
 
 nav ul li:hover {
 	transform: translateX(-70px);
 }
 
 nav ul li:hover:after {
-  opacity: 1;
-	transform: perspective(400px) rotateY(0deg) scale(1) ;
+	opacity: 1;
+	transform: perspective(400px) rotateY(0deg) scale(1);
 }
 
-
-nav ul li > div {
+nav ul li>div {
 	display: inline-block;
 	padding: 25px 0;
 	background: transparent;
 }
 
-nav ul li div { position: relative; }
+nav ul li div {
+	position: relative;
+}
 
+.mundo-icon{
+   font-size: 20px;
+}
+
+.mundo{
+   width: 60%;
+   filter: invert();
+}
 /* =========================================== */
 
-.img_grande{
+.img_grande {
 	margin-top: 90px;
 	width: 90%;
-}
-
-.imagens{
-	height: 100%;
-	gap: 35px;
-	margin-top: 40px;
-	display: flex;
-	flex-direction: row;
-	align-items: center;
-	
-}
-
-.anao{
-	width: 17%;
-	height: 250px;
-	border-radius: 20px;
-}
-.imagem{
-	border-radius: 14px;
-}
-.imagem:hover{
-	border-radius: 0px;
-}
-.game-name{
-	color: aliceblue;
-}
-.games{
-	margin-top: 10px;
-	display: flex;
+	display: inline-flex;
 	justify-content: center;
 	align-items: center;
-	flex-direction: column;
 }
-.gam{
-	display: flex;
-	justify-content: center;
+
+input[type=checkbox] {
+   margin: 0px;
+   display: none;
+}
+
+label i.fa:before {
+   content:'\f005';
+   color: #CCC;
+   cursor: pointer;
+}
+
+input[type=checkbox]:checked ~ label i.fa:before {
+   color: #FC0;    
+}
+
+ .search input:focus{
+   background-color: #350154;
+ }
+ 
+ .jogos {
+	 color: #fff;
+	display: flex;  
+   flex-wrap: wrap;
+   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+   font-weight: bold;
+  gap: 8vh;
+  align-items: center;
+  justify-content: center;
+  font-size: 1vw;
+}
+
+.jogo {
+	margin-top: 3%;
+	display: inline-flex;
+	flex-direction: column;
 	align-items: center;
-	flex-direction: column;
 }
-.gam:hover{
-	background-color: rgb(16, 0, 55);
-	transition:all .4s ease-out;
-	border-radius: 20px;
-	font-family:"LomoCopy LT Std Regular";
-	box-shadow: 2px 2px 6px;
-}
-.search-res{
-	color: aliceblue;
-	font-family:"LomoCopy LT Std Regular";
-}
+
+.jogo img {
+	border-radius: 10%;
+	width: 40vh;
+   }
+   
+   .imagem-jogo {
+	   display: inline-flex;
+	   align-items: flex-start;
+
+   }
+
+   .imagem-jogo input {
+	position: relative;
+	top: 10px;
+	left: -30px;
+   }
+   
+   .botao_carregar{
+	   font-size: 800;
+	   font-weight: bold;
+	   padding: 5px 20px 5px 20px;
+	   align-items: center;
+	   background-color:#02001f ;
+	   color: white;
+	   border-color: rgb(60, 0, 98);
+	   box-shadow: 1px 1px #f3f3f52f;
+	}
+
+	.center{
+	   display: flex;
+	   flex-direction: column;
+	   align-items: center;
+	 }
