--- a/teste/teste.css
+++ b/teste/teste.css
@@ -11,6 +11,7 @@
 
 body {
     background-image: url(../Background.png);
+
 }
 
 .conteudo {
@@ -246,12 +247,16 @@ nav ul li div {
 
 /* =========================================== */
 
+
 .img_grande {
     margin-top: 90px;
-    width: 90%;
+    width: 80vw;
+    height: 60vh;
+    border-radius: 30px;
     display: inline-flex;
     justify-content: center;
     align-items: center;
+    filter: drop-shadow(16px 16px 20px rgba(62, 0, 95, 0.755));
 }
 
 input[type=checkbox] {
@@ -279,10 +284,11 @@ input[type=checkbox]:checked~label i.fa:before {
     flex-wrap: wrap;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: bold;
-    gap: 8vh;
+    gap: 6vh;
     align-items: center;
     justify-content: center;
     font-size: 1vw;
+    filter: drop-shadow(16px 16px 20px rgba(62, 0, 95, 0.755));
 }
 
 .jogo {
