--- a/teste/teste.css
+++ b/teste/teste.css
@@ -20,9 +20,6 @@ body {
     gap: 30px;
 }
 
-div {
-    display: flex;
-}
 
 header {
     position: absolute;
@@ -250,8 +247,8 @@ nav ul li div {
 
 .img_grande {
     margin-top: 90px;
-    width: 80vw;
-    height: 60vh;
+    width: 85vw;
+    height: 46vh;
     border-radius: 30px;
     display: inline-flex;
     justify-content: center;
@@ -289,6 +286,10 @@ input[type=checkbox]:checked~label i.fa:before {
     justify-content: center;
     font-size: 1vw;
     filter: drop-shadow(16px 16px 20px rgba(62, 0, 95, 0.755));
+}
+
+.jogo img:hover{
+    width: 43vh;
 }
 
 .jogo {
@@ -333,4 +334,6 @@ input[type=checkbox]:checked~label i.fa:before {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
 }
+
