--- a/teste/teste.css
+++ b/teste/teste.css
@@ -17,6 +17,7 @@ body {
     display: flex;
     align-items: center;
     gap: 30px;
+    
 }
 
 header {
@@ -242,16 +243,6 @@ nav ul li div {
 
 /* =========================================== */
 
-.img_grande {
-    margin-top: 90px;
-    width: 85vw;
-    height: 46vh;
-    border-radius: 30px;
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    filter: drop-shadow(16px 16px 20px rgba(62, 0, 95, 0.755));
-}
 
 input[type=checkbox] {
     margin: 0px;
@@ -277,20 +268,20 @@ input[type=checkbox]:checked~label i.fa:before {
 
 .jogos {
     color: #fff;
-    display: flex;
-    flex-wrap: wrap;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    font-family: 'Segoe UI', Tahoma, Verdana, sans-serif;
     font-weight: bold;
-    gap: 6vh;
+    gap: 4vh;
     align-items: center;
     justify-content: center;
     font-size: 1vw;
     filter: drop-shadow(16px 16px 20px rgba(62, 0, 95, 0.755));
 }
 
-.jogo img:hover {
+/* .jogo img:hover {
     width: 43vh;
-}
+} */
 
 .jogo {
     margin-top: 3%;
@@ -329,14 +320,12 @@ input[type=checkbox]:checked~label i.fa:before {
 .center {
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: center;
 }
 
 .search {
     display: flex;
     flex-direction: column;
-    gap: .25rem;
 }
 
 input {
@@ -348,14 +337,14 @@ input {
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     gap: .25rem;
     margin-top: 1rem;
-  }
-  
-  .card {
+}
+
+.card {
     margin-top: 3%;
     display: inline-flex;
     flex-direction: row;
     align-items: center;
-  }
+}
 
 .card img {
     border-radius: 10%;
@@ -363,12 +352,39 @@ input {
 }
   
   .hide {
-    display: none;
-  }
-
-  .header{
-      margin-top: 3%;
-    display: inline-flex;
-    flex-direction: column;
-    align-items: center;
-  }
+      display: none;
+    }
+    
+    .header{
+        margin-top: 3%;
+        display: inline-flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    
+    .imagen_game{
+        background-color: #CCC;
+        padding: 20px 20px 20px 20px;
+        
+    }
+    
+    .img_grande {
+      background-color: #CCC;
+    }
+    
+    video{
+        width: 36vw;
+        border-radius: 30px;
+        margin-bottom: 20px;
+        filter: drop-shadow(16px 16px 20px rgba(62, 0, 95, 0.755));
+    }
+    
+    .imagem_game{
+        background-color: #240138;
+        padding: 1.6vw 0vh 0vh 3vh;
+        width: 89vw;
+        height: 23vw;
+        border-radius: 30px;
+        margin-top: 100px;
+        margin-bottom: 25px;
+    }
