--- a/teste3/style.css
+++ b/teste3/style.css
@@ -1,31 +1,9 @@
-.bod{
-    border: 1px solid red;
-    display: flex;
-    height: 100px;
-    justify-content: center;
-    align-items: center;
+.imagem_game{
+    background-color: rgb(0, 136, 255);
+    width: 1500px;
+    height: 505px;
 }
-.row{
-    border: 1px solid blue;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-}
-.search-in{
-    width: 300px;
-    height: 30px;
-}
-.card{
-    border: 1px solid green;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: center;
-}
-.games{
-    border: 1px solid red;
-}
-.hide{
-    display: none;
+
+video{
+    width: 900px;
 }
