--- a/teste/teste.css
+++ b/teste/teste.css
@@ -1,4 +1,15 @@
 @import url(//db.onlinewebfonts.com/c/bec3644fbb99759baf1d9dc9df1f187e?family=LomoCopy+LT+Std+Regular);
+
+@font-face {
+    font-family: 'Rocher';
+    src: url(https://assets.codepen.io/9632/RocherColorGX.woff2);
+}
+
+@font-palette-values --Grays {
+    font-family: Rocher;
+    base-palette: 9;
+    }
+
 *,
 *:before,
 *:after {
@@ -37,20 +48,30 @@ header {
 header li {
     color: rgb(255, 255, 255);
     font-family: "LomoCopy LT Std Regular";
-    font-size: 2%;
+    font-size: 2vh;
     list-style: none;
+    background-image: linear-gradient(#330150, rgb(87, 0, 99));
+    background-size: 100% 0px;
+    background-repeat: no-repeat;
+    background-position: 100% 0%;
+     transition: background-size .7s, background-position .5s ease-in-out;
 }
 
 header .navigation {
     display: flex;
     justify-content: center;
-    flex-wrap: wrap;
-    gap: 4vh;
+    gap: 7vh;
 }
+
+header li:hover {
+    background-size: 100% 100%;
+    background-position: 0% 100%;
+    transition: background-position .7s, background-size .5s ease-in-out;
+    filter: drop-shadow(16px 16px 20px rgba(62, 0, 95, 0.755));
+  }
 
 header .navigation li {
     list-style: none;
-    margin: 0 10px;
 }
 
 header .navigation li a {
@@ -160,6 +181,7 @@ nav ul li:nth-child(1):after {
     font-weight: 800;
     line-height: 88px;
     width: 100px;
+    font-family: "LomoCopy LT Std Regular";
 }
 
 nav ul li:nth-child(2):after {
@@ -167,20 +189,25 @@ nav ul li:nth-child(2):after {
     font-weight: 800;
     line-height: 88px;
     width: 100px;
+    font-family: "LomoCopy LT Std Regular";
 }
 
 nav ul li:nth-child(3):after {
     content: "MMOFPS";
+    font-size: 0.7em;
     line-height: 88px;
     font-weight: 800;
     width: 100px;
+    font-family: "LomoCopy LT Std Regular";
 }
 
 nav ul li:nth-child(4):after {
     content: "SURVIVAL";
+    font-size: 0.7em;
     line-height: 88px;
     font-weight: 800;
     width: 100px;
+    font-family: "LomoCopy LT Std Regular";
 }
 
 nav ul li:nth-child(5):after {
@@ -188,28 +215,34 @@ nav ul li:nth-child(5):after {
     line-height: 88px;
     font-weight: 800;
     width: 100px;
+    font-family: "LomoCopy LT Std Regular";
 }
 
 nav ul li:nth-child(6):after {
     content: "FIGHTING";
+    font-size: 0.7em;
     line-height: 88px;
     font-weight: 800;
     width: 100px;
+    font-family: "LomoCopy LT Std Regular";
 }
 
 nav ul li:nth-child(7):after {
     content: "SHOOTING";
+    font-size: 0.7em;
     line-height: 88px;
     font-weight: 800;
     width: 100px;
+    font-family: "LomoCopy LT Std Regular";
 }
 
 nav ul li:nth-child(8):after {
     content: "OPEN-WORLD";
-    font-size: 12px;
+    font-size: 0.6em;
     font-weight: 800;
     line-height: 88px;
     width: 100px;
+    font-family: "LomoCopy LT Std Regular";
 }
 
 nav ul li:hover {
@@ -236,10 +269,29 @@ nav ul li div {
 }
 
 .mundo {
-    width: 60%;
+    width: 35px;
     filter: invert();
 }
 
+.pvp{
+    width: 25px;
+    filter: invert();
+}
+
+.mmofps{
+    width: 35px;
+    filter: invert();
+}
+
+.survival{
+    width: 35px;
+    filter: invert();
+}
+
+.carta{
+    width: 35px;
+    filter: invert();
+}
 
 /* =========================================== */
 
@@ -270,7 +322,7 @@ input[type=checkbox]:checked~label i.fa:before {
     color: #fff;
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-    font-family: 'Segoe UI', Tahoma, Verdana, sans-serif;
+    font-family: 'Rocher';
     font-weight: bold;
     gap: 4vh;
     align-items: center;
@@ -330,6 +382,8 @@ input[type=checkbox]:checked~label i.fa:before {
 
 input {
     font-size: 1rem;
+    font-weight: bold;
+    font-family:"LomoCopy LT Std Regular";
 }
 
 .user-cards {
@@ -368,9 +422,6 @@ input {
         
     }
     
-    .img_grande {
-      background-color: #CCC;
-    }
     
     video{
         width: 36vw;
@@ -380,6 +431,7 @@ input {
     }
     
     .imagem_game{
+        display: inline-flex;
         background-color: #240138;
         padding: 1.6vw 0vh 0vh 3vh;
         width: 89vw;
@@ -388,3 +440,43 @@ input {
         margin-top: 100px;
         margin-bottom: 25px;
     }
+
+    .imagen_game_center{
+        display:flex;
+        flex-direction: column-reverse;
+        justify-content: flex-end;
+        align-items: center;
+        font-size: 1.5em;
+        color: aliceblue;
+        padding-left: 4vw;
+        font-family: 'Rocher';
+        filter: drop-shadow(16px 16px 20px rgba(62, 0, 95, 0.755));
+    }
+
+
+.imagen_game_center {
+font-palette: --Grays;
+}
+
+.jogos{
+    font-palette: --Grays;
+}
+
+.jogo img:hover{
+    transform: translateY(0);
+    box-shadow:
+    inset 0 0 20px whitesmoke,
+    inset 20px 0 40px #f0f,
+    inset -20px 0 40px #0ff,
+    inset 20px 0 100px #f0f,
+    inset -20px 0 100px #0ff,
+    0 0 30px #fff,
+    -10px 0 40px #f0f,
+    10px 0 40px #0ff;
+    transition: .5s;
+    transform: translateY(-10px);
+}
+
+.jogo{
+    
+}
