--- a/teste/teste.css
+++ b/teste/teste.css
@@ -348,13 +348,8 @@ input[type=checkbox]:checked~label i.fa:before {
 
 .imagem-jogo {
     display: inline-flex;
-    align-items: flex-start;
-}
+    margin-top: 20px;
 
-.imagem-jogo input {
-    position: relative;
-    top: 10px;
-    left: -30px;
 }
 
 .botao_carregar {
@@ -406,9 +401,10 @@ display: none;
 }
 
 .header{
-    display: inline-flex;
+    display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
 }
 
 .imagen_game{
@@ -424,11 +420,12 @@ video{
     filter: drop-shadow(16px 16px 20px rgba(62, 0, 95, 0.755));
 }
     
+
 .imagem_game{
     display: inline-flex;
     background-color: #240138;
     padding: 1.6vw 0vh 3vh 3vh;
-    width: 85vw;
+    width: 89vw;
     height: 23vw;
     border-radius: 30px;
     margin-top: 100px;
