--- a/teste/teste.css
+++ b/teste/teste.css
@@ -22,6 +22,9 @@
 
 body {
     background-image: url(../Background.png);
+    background-size: cover;
+            background-repeat: no-repeat;
+            background-attachment: fixed;
 }
 
 .conteudo {
@@ -318,7 +321,7 @@ input[type=checkbox]:checked~label i.fa:before {
 }
 
 .jogos {
-    margin-top:4vw;
+    margin-top:5vw;
     color: #fff;
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
